# oot_tum

./: .gitignore
rfnoc-oot_tum/: CMakeLists.txt  README.md  capture_probes.py  diagnose_symbols.py  feed_golden_loop.py  feed_pattern.py  ofdm_tx_expected.hex  ofdm_tx_expected_2frame.hex  ofdm_tx_expected_5frame.hex  ofdm_tx_input_2frame.hex  ofdm_tx_input_5frame.hex  plot_loopback.py  probe_ofdm_tx_ep0.py  test_output_determinism.py  transceiver.py  transceiver_rx.py  transceiver_template.py  transceiver_txrx.py  verify_full_frame.py
rfnoc-oot_tum/apps/: CMakeLists.txt
rfnoc-oot_tum/cmake/Modules/: rfnoc-oot_tumConfig.cmake
rfnoc-oot_tum/examples/: CMakeLists.txt
rfnoc-oot_tum/icores/: CMakeLists.txt  x440_X4_200_rfnoc_image_core_custom_ofdm.yml  x440_X4_200_rfnoc_image_core_custom_ofdm_rx.yml  x440_X4_200_rfnoc_image_core_custom_ofdm_txrx.yml
rfnoc-oot_tum/include/rfnoc/oot_tum/: CMakeLists.txt  config.hpp  ofdm_rx_sl_block_control.hpp  ofdm_tx_sl_block_control.hpp
rfnoc-oot_tum/python/: CMakeLists.txt  ofdm_rx_sl_block_control_python.hpp  ofdm_tx_sl_block_control_python.hpp  pyrfnoc-oot_tum.cpp  setup.py.in
rfnoc-oot_tum/python/rfnoc_oot_tum/: __init__.py
rfnoc-oot_tum/rfnoc/: CMakeLists.txt
rfnoc-oot_tum/rfnoc/blocks/: ofdm_rx_sl.yml  ofdm_tx_sl.yml
rfnoc-oot_tum/rfnoc/fpga/oot_tum/: CMakeLists.txt
rfnoc-oot_tum/rfnoc/fpga/oot_tum/rfnoc_block_ofdm_rx_sl/: Bank_A.sv  Bank_B.sv  CPRemoval_stage1.sv  CPRemoval_stage2.sv  (+140 more)
rfnoc-oot_tum/tests/: CMakeLists.txt  oot_tum_block_test.cpp  oot_tum_math_test.cpp
rfnoc-oot_tum/tools/: ila_cap_symk.tcl
(+85 files in other folders)
